--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Dependencies
-/node_modules
+# Dependency directories
+node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
@@ -27,15 +27,38 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
+# nyc test coverage
+.nyc_output
+
 # Compiled binary addons
-build/
-dist/
+dist
+build
 
-# Misc
-.DS_Store
+# Dependency folders
+.pnp
+.pnp.js
 
-# IDE specific files
-.idea/
-.vscode/
+# Editors
+.idea
+.vscode
 *.swp
-*.swo 
+*.swo
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*~
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log* 
