--- a/vercel.json
+++ b/vercel.json
@@ -13,11 +13,11 @@
   "routes": [
     {
       "src": "/api/hello",
-      "dest": "api/hello.js"
+      "dest": "/api/hello.js"
     },
     {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "/api/index.js"
     }
   ],
   "env": {
